# graphs_algorithms

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  plot_results.py  run_benchmarks.py
.devcontainer/: devcontainer.json
data/: .gitkeep
include/algorithms/mst/: Prim.hpp
include/algorithms/sp/: Dijkstra.hpp
include/generator/: GraphGenerator.hpp
include/graph/: Edge.hpp  GraphLoader.hpp  ListGraph.hpp  MatrixGraph.hpp  Strucktures.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/algorithms/mst/: Prim.cpp
src/algorithms/sp/: Dijkstra.cpp
src/generator/: GraphGenerator.cpp
src/graph/: GraphLoader.cpp
tests/: mst_test.txt  run_tests.sh  sp_test.txt
